# hud-spreadsheetbench

./: .gitignore  Dockerfile  config.py  env.py  local_test.py  pyproject.toml
data/: split_dataset.py
evaluate/: compare.py  eval_all.py  generalize.py
scenarios/: __init__.py  all.py  spreadsheet_all.py
scenarios/prompts/: __init__.py
tools/: __init__.py  jupyter.py
